--- a/codeblogs/blog/templates/blog/includes/post.html
+++ b/codeblogs/blog/templates/blog/includes/post.html
@@ -2,14 +2,14 @@
 
 <li>
   <article class="post">
-    <a href="{% url 'post-detail-page' 'the-mountains' %}">
+    <a href="{% url 'post-detail-page' post.slug %}">
       <img
-        src="{% static 'blog/images/mountains.jpg' %}"
-        alt="Mountain Hiking"
+        src="{% static 'blog/images/'|add:post.image %}"
+        alt="{{ post.title }}"
       />
       <div class="post__content">
-        <h3>Mountain Hiking</h3>
-        <p>There is nothing like the views when hiking mountains</p>
+        <h3>{{ post.title }}</h3>
+        <p>{{ post.excerpt }}</p>
       </div>
     </a>
   </article>
