--- a/codeblogs/blog/templates/blog/post-detail.html
+++ b/codeblogs/blog/templates/blog/post-detail.html
@@ -1,40 +1,23 @@
-{% extends 'base.html' %} {% load static %} {% block title %}This Post Title
+{% extends 'base.html' %} {% load static %} 
+{% block title %}
+  {{ post.title }}
 {% endblock %}
 
- {% block css_files %}
+{% block css_files %}
    <link rel="stylesheet" href="{% static "blog/post-detail.css" %}"> 
 {% endblock css_files %} 
 
 {% block content %}
 <section id="summary">
-  <h2>Post Title</h2>
+  <h2>{{ post.title }}</h2>
   <article>
-    <img src="{% static 'blog/images/mountains.jpg' %}" alt="Post Title" />
-    <address>By Harsh Agarwal</address>
-    <div>last updated on <time>Today</time></div>
+    <img src="{% static 'blog/images/'|add:post.image %}" alt={{post.title}} />
+    <address>{{post.author|title}}</address>
+    <div>last updated on <time>{{post.date|date:"d M Y"}}</time></div>
   </article>
 </section>
 
 <main>
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias est
-    nihil, illum nisi fugiat nemo. Neque repudiandae harum, explicabo
-    reprehenderit, enim obcaecati corrupti facere quis labore accusamus ratione
-    accusantium alias.
-  </p>
-
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias est
-    nihil, illum nisi fugiat nemo. Neque repudiandae harum, explicabo
-    reprehenderit, enim obcaecati corrupti facere quis labore accusamus ratione
-    accusantium alias.
-  </p>
-
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias est
-    nihil, illum nisi fugiat nemo. Neque repudiandae harum, explicabo
-    reprehenderit, enim obcaecati corrupti facere quis labore accusamus ratione
-    accusantium alias.
-  </p>
+  {{post.content|linebreaks}}
 </main>
 {% endblock content %}
